examples/datalog/21_query_features/50_query_derived.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_derived
Knowledge graph 'test_derived' created.
Switched to knowledge graph: test_derived
> .kg use test_derived
Switched to knowledge graph: test_derived
> +base[(1, 10), (2, 20), (3, 30)].
Inserted 3 fact(s) into 'base'.
> +doubled(Id, D) :- base(Id, V), D = V * 2.
Script error: Failed to register rule: Unsafe rule 'doubled': Head variable(s) D not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
